--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -7,7 +7,7 @@
     <!--      content="connect-src *; default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;"-->
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src * 'self'; script-src 'self' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src * 'self' file: img:;"
+      content="default-src * 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src * 'self' file: img:;"
     />
   </head>
 
