--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -11,7 +11,7 @@
     />
   </head>
 
-  <body style="-webkit-app-region: drag">
+  <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
